@@ -97,6 +97,7 @@ int openvas_server_sendf (gnutls_session_t *, const char *, ...)
     __attribute__ ((format (printf, 2, 3)));
 
 int openvas_server_vsendf (gnutls_session_t *, const char *, va_list);
+int openvas_socket_vsendf (int, const char *, va_list);
 
 int openvas_server_sendf_xml (gnutls_session_t *, const char *, ...);
 int openvas_server_sendf_xml_quiet (gnutls_session_t *, const char *, ...);
